--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <img src="img/Krzesla/krzes1.jpg" alt="Krzesła" />
       <span class="category-name">Krzesła</span>
     </a>
-    <a href="Stoly.html" class="category-box">
+    <a href="stoly.html" class="category-box">
       <img src="img/Stoly/stoly1.jpg" alt="Stoły" />
       <span class="category-name">Stoły</span>
     </a>
