--- a/oferta.html
+++ b/oferta.html
@@ -55,7 +55,7 @@
     <li>
       <a href="stoly.html">
         <img src="img/Stoly/stoly1.jpg" alt="Stoly">
-        <span>Sto</span>
+        <span>Stoły</span>
       </a>
     </li>
   </ul>
