--- a/oferta.html
+++ b/oferta.html
@@ -12,18 +12,18 @@
       <div class="logo"><a href="index.html">Meble Adaś</a></div>
       <nav class="navbar">
         <ul class="nav-menu">
-          <li><a href="index.html">Strona Główna</a></li>
+          <li><a href="/index.html">Strona Główna</a></li>
           <li class="dropdown">
-            <a href="oferta.html">Oferta</a>
+            <a href="/oferta">Oferta</a>
             <ul class="dropdown-menu">
-              <li><a href="kuchnie.html">Kuchnie</a></li>
-              <li><a href="szafy.html">Szafy</a></li>
-              <li><a href="krzesla.html">Krzesła</a></li>
-              <li><a href="stoly.html">Stoły</a></li>
+              <li><a href="/kuchnie">Kuchnie</a></li>
+              <li><a href="/szafy">Szafy</a></li>
+              <li><a href="/krzesla">Krzesła</a></li>
+              <li><a href="/stoly">Stoły</a></li>
             </ul>
           </li>
-          <li><a href="uslugi.html">Usługi</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
+          <li><a href="/uslugi">Usługi</a></li>
+          <li><a href="/kontakt">Kontakt</a></li>
         </ul>
       </nav>
     </div>
