--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
       <div class="logo"><a href="index.html">Meble Adaś</a></div>
       <nav class="navbar">
         <ul class="nav-menu">
-          <li><a href="">Strona Główna</a></li>
+          <li><a href="index.html">Strona Główna</a></li>
           <li class="dropdown">
             <a href="/oferta">Oferta</a>
             <ul class="dropdown-menu">
