--- a/oferta.html
+++ b/oferta.html
@@ -9,10 +9,10 @@
 <body>
   <header>
     <div class="top-bar">
-      <div class="logo"><a href="index.html">Meble Adaś</a></div>
+      <div class="logo"><a href="">Meble Adaś</a></div>
       <nav class="navbar">
         <ul class="nav-menu">
-          <li><a href="index.html">Strona Główna</a></li>
+          <li><a href="">Strona Główna</a></li>
           <li class="dropdown">
             <a href="/oferta">Oferta</a>
             <ul class="dropdown-menu">
@@ -35,25 +35,25 @@
   <h1>Nasza oferta</h1>
   <ul class="offer-list">
     <li>
-      <a href="kuchnie.html">
+      <a href="/kuchnie">
         <img src="img/Kuchnia/kuchnia.jpg" alt="Kuchnie">
         <span>Kuchnie</span>
       </a>
     </li>
     <li>
-      <a href="szafy.html">
+      <a href="/szafy">
         <img src="img/Szafy/szafy1.jpg" alt="Szafy">
         <span>Szafy</span>
       </a>
     </li>
     <li>
-      <a href="krzesla.html">
+      <a href="/krzesla">
         <img src="img/Krzesla/krzes1.jpg" alt="Krzesła">
         <span>Krzesła</span>
       </a>
     </li>
     <li>
-      <a href="stoly.html">
+      <a href="/stoly">
         <img src="img/Stoly/stoly1.jpg" alt="Stoly">
         <span>Stoły</span>
       </a>
@@ -77,14 +77,14 @@
     <div class="footer-links">
       <h3>Menu</h3>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="oferta.html">Oferta</a></li>
-        <li><a href="kuchnie.html">Kuchnia</a></li>
-        <li><a href="szafy.html">Szafy</a></li>
-        <li><a href="krzesla.html">Krzesła</a></li>
-        <li><a href="stoly.html">Stoły</a></li>
-        <li><a href="uslugi.html">Nasze usługi</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="/oferta">Oferta</a></li>
+        <li><a href="/kuchnie">Kuchnia</a></li>
+        <li><a href="/szafy">Szafy</a></li>
+        <li><a href="/krzesla">Krzesła</a></li>
+        <li><a href="/stoly">Stoły</a></li>
+        <li><a href="/uslugi">Nasze usługi</a></li>
+        <li><a href="/kontakt">Kontakt</a></li>
       </ul>
     </div>
 
