--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <header>
     <div class="top-bar">
-      <div class="logo"><a href="index.html">Meble Adaś</a></div>
+      <div class="logo"><a href="">Meble Adaś</a></div>
       <nav class="navbar">
         <ul class="nav-menu">
-          <li><a href="/index.html">Strona Główna</a></li>
+          <li><a href="">Strona Główna</a></li>
           <li class="dropdown">
             <a href="/oferta">Oferta</a>
             <ul class="dropdown-menu">
@@ -39,7 +39,7 @@
   <div class="hero-content">
     <h1>Kuchnie na wymiar z montażem</h1>
     <p>Projektujemy i wykonujemy meble dopasowane do Twoich potrzeb – z montażem</p>
-    <a href="uslugi.html" class="btn">Zobacz usługi</a>
+    <a href="/uslugi" class="btn">Zobacz usługi</a>
   </div>
 </section>
 
@@ -77,19 +77,19 @@
 <section class="categories">
   <h2>Nasze meble do każdego wnętrza</h2>
   <div class="categories-grid">
-    <a href="kuchnie.html" class="category-box">
+    <a href="/kuchnie" class="category-box">
       <img src="img/Kuchnia/kuchnia.jpg" alt="Kuchnie" />
       <span class="category-name">Kuchnie</span>
     </a>
-    <a href="szafy.html" class="category-box">
+    <a href="/szafy" class="category-box">
       <img src="img/Szafy/szafy1.jpg" alt="Szafy" />
       <span class="category-name">Szafy</span>
     </a>
-    <a href="krzesla.html" class="category-box">
+    <a href="/krzesla" class="category-box">
       <img src="img/Krzesla/krzes1.jpg" alt="Krzesła" />
       <span class="category-name">Krzesła</span>
     </a>
-    <a href="stoly.html" class="category-box">
+    <a href="/stoly" class="category-box">
       <img src="img/Stoly/stoly1.jpg" alt="Stoły" />
       <span class="category-name">Stoły</span>
     </a>
@@ -111,14 +111,14 @@
     <div class="footer-links">
       <h3>Menu</h3>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="oferta.html">Oferta</a></li>
-        <li><a href="kuchnie.html">Kuchnia</a></li>
-        <li><a href="szafy.html">Szafy</a></li>
-        <li><a href="krzesla.html">Krzesła</a></li>
-        <li><a href="stoly.html">Stoły</a></li>
-        <li><a href="uslugi.html">Nasze usługi</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="/oferta">Oferta</a></li>
+        <li><a href="/kuchnie">Kuchnia</a></li>
+        <li><a href="/szafy">Szafy</a></li>
+        <li><a href="/krzesla">Krzesła</a></li>
+        <li><a href="/stoly">Stoły</a></li>
+        <li><a href="/uslugi">Nasze usługi</a></li>
+        <li><a href="/kontakt">Kontakt</a></li>
       </ul>
     </div>
 
