--- a/krzesla.html
+++ b/krzesla.html
@@ -10,10 +10,10 @@
 <body>
   <header>
     <div class="top-bar">
-      <div class="logo"><a href="index.html">Meble Adaś</a></div>
+      <div class="logo"><a href="">Meble Adaś</a></div>
       <nav class="navbar">
         <ul class="nav-menu">
-          <li><a href="index.html">Strona Główna</a></li>
+          <li><a href="">Strona Główna</a></li>
           <li class="dropdown">
             <a href="/oferta">Oferta</a>
             <ul class="dropdown-menu">
@@ -92,18 +92,18 @@
       </div>
 
       <div class="footer-links">
-        <h3>Menu</h3>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="oferta.html">Oferta</a></li>
-          <li><a href="kuchnie.html">Kuchnia</a></li>
-          <li><a href="szafy.html">Szafy</a></li>
-          <li><a href="krzesla.html">Krzesła</a></li>
-          <li><a href="stoly.html">Stoły</a></li>
-          <li><a href="uslugi.html">Nasze usługi</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
-        </ul>
-      </div>
+      <h3>Menu</h3>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="/oferta">Oferta</a></li>
+        <li><a href="/kuchnie">Kuchnia</a></li>
+        <li><a href="/szafy">Szafy</a></li>
+        <li><a href="/krzesla">Krzesła</a></li>
+        <li><a href="/stoly">Stoły</a></li>
+        <li><a href="/uslugi">Nasze usługi</a></li>
+        <li><a href="/kontakt">Kontakt</a></li>
+      </ul>
+    </div>
     </div>
     <div class="footer-bottom">
       <p>&copy; 2025 Meble Comfort. Wszelkie prawa zastrzeżone.</p>
