--- a/kuchnie.html
+++ b/kuchnie.html
@@ -11,10 +11,10 @@
 <body>
   <header>
     <div class="top-bar">
-      <div class="logo"><a href="">Meble Adaś</a></div>
+      <div class="logo"><a href="/home">Meble Adaś</a></div>
       <nav class="navbar">
         <ul class="nav-menu">
-          <li><a href="">Strona Główna</a></li>
+          <li><a href="/home">Strona Główna</a></li>
           <li class="dropdown">
             <a href="/oferta">Oferta</a>
             <ul class="dropdown-menu">
@@ -99,7 +99,7 @@
     <div class="footer-links">
       <h3>Menu</h3>
       <ul>
-        <li><a href="">Home</a></li>
+        <li><a href="/home">Home</a></li>
         <li><a href="/oferta">Oferta</a></li>
         <li><a href="/kuchnie">Kuchnia</a></li>
         <li><a href="/szafy">Szafy</a></li>
